# commitward

./: .dockerignore  CONTRACT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dist  README.md  SECURITY.md  checkpoints.yaml  install-hook.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
src/: gitdiff.rs  lib.rs  main.rs
tests/: cli_smoke.rs  destructive_fp_probe.rs  gitdiff.rs  install_hook_test.sh
tests/corpus/.dotclaude/: checkpoints.yaml
tests/corpus/conformance/detect-hitl/ack/fenced-body/: expected.json  input.json
tests/corpus/conformance/detect-hitl/ack/garbage-line/: expected.json  input.json
tests/corpus/conformance/detect-hitl/ack/multiple-lines/: expected.json  input.json
tests/corpus/conformance/detect-hitl/ack/no-reason/: expected.json  input.json
tests/corpus/conformance/detect-hitl/content/clean-df/: input.json
tests/corpus/conformance/detect-hitl/content/clean-fd/: input.json
tests/corpus/conformance/detect-hitl/content/clean-fdx/: input.json
tests/corpus/conformance/detect-hitl/content/exempt-doc/: input.json
tests/corpus/conformance/detect-hitl/content/force-push/: expected.json  input.json
tests/corpus/conformance/detect-hitl/content/force-push-short/: input.json
tests/corpus/conformance/detect-hitl/content/push-branch-benign/: input.json
tests/corpus/conformance/detect-hitl/content/rm-force-only-clean/: input.json
tests/corpus/promise/: checkpoints.yaml
(+23 files in other folders)
