[package]
name = "commitward"
version = "0.1.0"
edition = "2021"
description = "Deterministic, fail-open human-sign-off (HITL) gate for high-stakes agentic commits"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Barnett-Studios/commitward"

[lib]
name = "commitward"
path = "src/lib.rs"

[[bin]]
name = "commitward"
path = "src/main.rs"

[dependencies]
once_cell = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
thiserror = "1"
